toolchain/parse/src/module/snapshots/knot_parse__module__import__tests__import_named_with_alias.snap
---
source: toolchain/parse/src/module/import.rs
expression: ast
---
Import(
    Node(
        Import {
            source: Root,
            path: [
                "foo",
                "fizz",
            ],
            alias: Some(
                "buzz",
            ),
        },
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                22,
            ),
        ),
        (),
    ),
)
