toolchain/parse/src/module/snapshots/knot_parse__module__import__tests__import_nested.snap
---
source: toolchain/parse/src/module/import.rs
expression: ast
---
Import(
    Node(
        Import {
            source: Root,
            path: [
                "foo",
                "bar",
                "fizz",
            ],
            alias: None,
        },
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                18,
            ),
        ),
        (),
    ),
)
